# Algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.ps1  mkdocs.yml  pom.xml  pyproject.toml  requirements.txt
AI/LLM/: README.md  pyproject.toml  requirements.txt
AI/NLP/: README.md
AI/NLP/model/: NLPBaseNet.md  NLPBaseNet.py
AI/bigmodel/: README.md  requirements.txt
AI/bigmodel/docs/: ollama.md
AI/docs/: ModelCompressionAndAcceleration.md
SVM/: SVM_OpenCV.cpp  SVM_OpenCV.py
docs/: LLM.md  ML.md  Vision.md  bigmodel.md  interpolation.md  security.md
interpolation/: README.md  scipy_interpolate.py
optimization/: README.md
security/: CMakeLists.txt  README.md  pom.xml
security/docs/: index.md
security/src/main/java/com/ahri/: HashAlgorithms.java  SM2.java
sort/: CMakeLists.txt  sort.c
tree/: CMakeLists.txt  README.md  binary_tree.h  red_black_tree.c  red_black_tree.h  test_binary_tree.c  test_red_black_tree.c
