[project]
name = "algorithms"
version = "0.1.0"
description = "Sokyoei's Algorithms"
authors = [{ name = "Sokyoei", email = "89757286+Sokyoei@users.noreply.github.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
AI = ["transformers"]
ML = ["scikit-learn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["Algorithms"]
